# Comfyui_image2prompt

./: .gitignore  README.md  __init__.py  bnk_adv_encode.py  conditioning.py  deepseek_model.py  image2prompt_workflow.json  image2text.py  install.py  internlm_model.py  internlm_workflow.json  model.py  moodream2_model.py  moondream2_model.py  moondream_model.py  pyproject.toml  qwen_model.py  text2prompt.py  tools.py  translate.py  uform_qwen_model.py  utils.py  wd_v3_model.py
js/: fofo_showtext.js
src/: bnk_adv_encode.py  conditioning.py  image2text.py  install.py  llama3_model.py  moondream2_model.py  reward.py  t5_gpt.py  text2prompt.py  tools.py  uform_qwen_model.py  utils.py  wd_v3_model.py
workflows/: deepseek-vl-7b.json  image2prompt_workflow.json  prompt_compare.json  prompt_cond.json  prompt_reward.json  reward_images.json  sdxl_image2prompt_reward.json  superprompt-v1+reward.json  t5_model.json
